Changes rendered to the README.md file to ensure that compliance is met with best practices for transparency on project limitatations. In addition to this, many reported issues regarding streamlit and its usage have been resolved with comments added where applicable to showcase project status and future plans.

--- a/.gitignore
+++ b/.gitignore
@@ -73,6 +73,7 @@ colab_training_script.py
 init_cloud_db.py
 quick_upload.py
 ml_integration.py
+bestbuy_webscraper.py
 
 # ML models (if large)
 *.pkl
